z-index for welcome bar solved

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,3 +1,8 @@
+#header {
+    position: relative;
+    z-index: 2;
+}
+
 @media(min-width:700px) {
    a.menu-element {
       margin: 0 .2em;
